--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -16,6 +16,12 @@
     align-items: center;
 }
 
+.select-container{
+    margin-left: auto;
+    margin-right: 1rem;
+
+}
+
 .logo a{
     text-decoration: none;
     color:black
