--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -8,7 +8,23 @@
     margin-bottom: -3.5px;
 }
 
-.copy-button{
+.SingleColorPalette .ColorBox{
+    height: 50%;
+}
+
+
+.ColorBox:hover .copy-button{
+    opacity:1;
+    transition:0.5s
+}
+
+.ColorBox.go-back{
+    background-color: black;
+}
+
+
+.copy-button,
+.back-button{
     width: 100px;
     height: 30px;
     position: absolute;
@@ -25,13 +41,14 @@
     color: white;
     text-transform: uppercase;
     border:none;
-    opacity: 0;
+    text-decoration: none;
 }
 
-.ColorBox:hover .copy-button{
-    opacity:1;
-    transition:0.5s
+.copy-button{
+    opacity: 0;
+
 }
+
 
 .box-content{
     position: absolute;
