--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox{
+/* .ColorBox{
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -10,16 +10,17 @@
 
 .SingleColorPalette .ColorBox{
     height: 50%;
-}
+} */
 
 
-.ColorBox:hover .copy-button{
+/* .ColorBox:hover .copy-button{
     opacity:1;
     transition:0.5s
-}
-
+} */
+/* 
 .ColorBox.go-back{
     background-color: black;
+    position: relative;
 }
 
 
@@ -42,15 +43,15 @@
     text-transform: uppercase;
     border:none;
     text-decoration: none;
-}
+} */
 
-.copy-button{
+/* .copy-button{
     opacity: 0;
 
-}
+} */
 
 
-.box-content{
+/* .box-content{
     position: absolute;
     padding:10px;
     width:100%;
@@ -60,16 +61,16 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
-}
+} */
 
-.light-text{
+/* .light-text{
     color:white;
 }
 .ColorBox .dark-text{
     color:rgba(0,0,0,0.5);
-}
+} */
 
-.see-more{
+/* .see-more{
     background: rgba(255,255,255,0.3);
     position: absolute;
     border: none;
@@ -81,9 +82,9 @@
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
-}
+} */
 
-.copy-overlay{
+/* .copy-overlay{
     opacity:0;
     z-index:0;
     width:100%;
@@ -97,9 +98,9 @@
     transform:scale(50);
     z-index:10;
     position:absolute;
-}
+} */
 
-.copy-msg{
+/* .copy-msg{
     position: fixed;
     left:0;
     right: 0;
@@ -110,21 +111,19 @@
     align-items: center;
     justify-content: center;
     font-size: 4rem;
-    
     transform: scale(0.1);
-    
     opacity:0;
     color:white;
-}
+} */
 
-.copy-msg.show{
+/* .copy-msg.show{
     opacity:1;
     transform: scale(1);
     z-index:25;
     transition:all 0.4s ease-in-out;
     transition-delay: 0.3s;
-}
-
+} */
+/* 
 .copy-msg h1{
     font-weight: 400;
     text-shadow: 1px 2px black;
@@ -134,11 +133,11 @@
     margin-bottom: 0;
     padding: 1rem;
     text-transform: uppercase;
-}
+} */
 
-.copy-msg p{
+/* .copy-msg p{
     font-size: 2rem;
     font-weight: 100;
-}
+} */
 
 
